tests/regression/error/hw5_error21.nex
fun f()
{
}

fun g()
{
}

fun f()
{
}
